# crile

./: Cargo.toml  README.md  clippy.toml
crile/: Cargo.toml
crile-editor/: Cargo.toml
crile-editor/src/: editor_camera.rs  editor_state.rs  inspector_panel.rs  main.rs  options.rs  preferences.rs  project.rs  scene_hierachy_panel.rs
crile-editor/src/sections/: hierarchy.rs  inspector.rs  mod.rs  popups.rs  top_panel.rs  viewport.rs
crile-editor/src/tabs/: hierarchy.rs  inspector.rs  mod.rs  viewport.rs
crile-egui/: Cargo.toml
crile-egui/src/: egui_context.rs  egui_inspectable.rs  egui_renderer.rs  inspect.rs  lib.rs
crile/examples/: scene.rs  test.rs
crile/src/: asset.rs  asset_library.rs  clipboard.rs  egui.rs  engine.rs  error.rs  events.rs  fs.rs  hashmap.rs  input.rs  lib.rs  math.rs  ref_id.rs  renderer.rs  tests.rs  time.rs  utils.rs  window.rs
crile/src/ecs/: archetype.rs  component.rs  components.rs  mod.rs  query.rs  scene.rs  scene_serializer.rs  tests.rs  type_info.rs  world.rs
crile/src/events/: codes.rs  input.rs  mod.rs
crile/src/graphics/: bind_group.rs  buffer.rs  camera.rs  color.rs  graphics_context.rs  instance.wgsl  instanced.wgsl  mesh.rs  mod.rs  rect.rs  render_pass.rs  render_pipeline.rs  renderer.rs  renderer_2d.rs  renderer_api.rs  shader.wgsl  single_draw.wgsl  texture.rs  window.rs
crile/src/graphics/shaders/: instanced.wgsl  single_draw.wgsl
crile/src/scene/: components.rs  mod.rs  scene.rs  scene_runner.rs  scene_runtime.rs  scene_serializer.rs  tests.rs
crile/src/scripting/: components.rs  input.rs  mod.rs  script.rs  time.rs  vector.rs
examples/test_project/: perspective.scene  project.crile  script.lua  script.luau  sprite.scene  test.scene
