[package]
name = "crile-editor"
version = "0.0.0"
edition = "2021"

[dependencies]
egui = "0.26"
egui_dock = "0.11"
glam = "0.25"
log = "0.4"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
pathdiff = "0.2"

crile = { path = "../crile" }
crile-egui = { path = "../crile-egui" }
