[package]
name = "crile"
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
copypasta = "0.10"
glam = { version = "0.25", features = ["bytemuck", "serde"] }
hashbrown = "0.14"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3"
wgpu = "0.19"
winit = "0.29"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
dirs = "5.0"
serde_yaml = "0.9"
