[package]
name = "crile"
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
copypasta = "0.10"
glam = { version = "0.28", features = ["bytemuck", "serde"] }
hashbrown = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3"
wgpu = "22"
winit = "0.30"
serde = { version = "1", features = ["derive"] }
dirs = "5"
toml = "0.8"
mlua = { version = "0.9", features = ["luau"] }
strum = { version = "0.26", features = ["derive"] }
