[package]
name = "crile"
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
copypasta = "0.10"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
hashbrown = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.4"
wgpu = "24"
winit = "0.30"
serde = { version = "1", features = ["derive"] }
dirs = "6"
toml = "0.8"
mlua = { version = "0.10", features = ["luau"] }
strum = { version = "0.27", features = ["derive"] }
rand = "0.9"
